# SHeaP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  convert_flame.py  demo.py  gradio_demo.py  pyproject.toml  video_demo.py
FLAME2020/: eyelids.pt
now/: now.py
sheap/: __init__.py  eval_utils.py  fa_landmark_utils.py  flame_segmentation.py  landmark_utils.py  load_flame_pkl.py  load_model.py  render.py  tiny_flame.py
