[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sheap"
version = "0.1.0"
description = "SHeaP: Self-Supervised Head Geometry Predictor Learned via 2D Gaussians"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Liam Schoneveld" }
]
keywords = ["3d", "face", "flame", "head", "mesh", "reconstruction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
]

[project.urls]
Homepage = "https://nlml.github.io/sheap"
Repository = "https://github.com/nlml/sheap"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sheap"]
